# SEXCI

./: .breakpoints  Alexcodex.session  README.md  ale_1.sql  alooa.sql  approved.txt  banned.txt  bin_banned.txt  configs.py  db.py  main.py  owner.txt  pyproject.toml  shades.session  user.py
plugins/admins/: admin.py  ban.py  binbanned.py  claim.py  creditos.py  deldb.py  delkey.py  groups.py  id.py  key.py  mensaje.py  panel.py  premium.py  trad.py
plugins/cmds/: .cmds.py.4162750752~  cmds.py  gate.py  perfil.py  prices.py  register.py
plugins/tools/: bin.py  clean.py  code.py  exta.py  extb.py  exti.py  extmv.py  extra.py  exts.py  genmass.py  ibam.py  ip.py  ping.py  rand.py  sites.py  sk.py  sophia.py
